完善整体逻辑（待连接硬件调试）

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
-    "device": "",
-    "baudrate": 115200,
+    "device": "COM4",
+    "baudRate": 115200,
     "barkServer": "https://api.day.app",
     "barkSecret": "cGqioDx5Yk44mLeu3qpxFP",
     "wxCropId": "",
